--- a/internalLibraries/backup/build.gradle
+++ b/internalLibraries/backup/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.filters.TokenFilter;
+
 apply plugin: 'scripts'
 
 scripts {
@@ -21,6 +23,9 @@ task bkScripts(type: Copy) {
     from "src/scripts"
     into "${buildDir}/bin"
     fileMode = 0755
+    filter { String line ->
+        line.contains('BUILD_TYPE=') ? line + buildType : line
+    }
 }
 
 project.tasks['scripts'].dependsOn("bkScripts")
