--- a/vipr-portal/com.emc.sa.common/src/java/com/emc/sa/descriptor/ServiceDescriptors.properties
+++ b/vipr-portal/com.emc.sa.common/src/java/com/emc/sa/descriptor/ServiceDescriptors.properties
@@ -268,6 +268,7 @@ ChangeVirtualPool.Block.consistencyGroup.description=Consistency Group can only 
 
 AddJournalCapacity.Block.title=Add Journal Capacity
 AddJournalCapacity.Block.description=Add additional journal volumes
+AddJournalCapacity.Block.size.description=The default size is based on RP best practices to improve performance.
 
 ### ViPR File Services ###
 File.category=File Services
