Fix to throw exception for xio 4.x systems and there is not response from v2 client.

--- a/exportLibraries/xtremio/src/main/java/com/emc/storageos/xtremio/restapi/errorhandling/XtremIOApiExceptions.properties
+++ b/exportLibraries/xtremio/src/main/java/com/emc/storageos/xtremio/restapi/errorhandling/XtremIOApiExceptions.properties
@@ -6,3 +6,4 @@ discoveryFailed="Discovery failed for xtremio system {0}";
 scanFailed="Scan failed for xtremio system {0}";
 moreThanOneClusterNotSupported="XtremIO {0} configured with one more than one cluster which is not supported."
 operationNotSupportedForVersion="Operation {0} not supported for the xtremio array version"
+noConnectionFound = Operation failed due to failure in getting Xtremio client for url {0}. 
